header overlap issue fixed

--- a/src/pages/privacy-policy/style.module.css
+++ b/src/pages/privacy-policy/style.module.css
@@ -1,7 +1,6 @@
 .mainWrapper {
     padding: 49px 0px 42px 0px;
     border-top: 1px solid #e1e4e8;
-    margin-top: 24px;
 }
 
 .content {
